# wikisource-automation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
src/wikisource/: etext_upload.py
src/wikisource/helper_function/: __init__.py  etext_UploadHelper_GSheet.py
src/wikisource/text_operations/GDocs_operations/: drive_docs_link_retriever.py  update_google_sheets.py  upload_to_google_docs.py
src/wikisource/text_operations/text_splitter_txt/: kagyur_splitter.py
src/wikisource/utils/: __init__.py  logger.py
tests/: test_etext_upload.py  test_kagyur_splitter.py
